--- a/Reproductor/MainWindow.xaml
+++ b/Reproductor/MainWindow.xaml
@@ -28,12 +28,12 @@
         <TextBox x:Name="txtDuracionFadeOut" HorizontalAlignment="Left" Height="23" Margin="144,155,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btnFadeOut" Content="Iniciar Fade Out" HorizontalAlignment="Left" Margin="279,155,0,0" VerticalAlignment="Top" Width="103" Click="btnFadeOut_Click"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,198,0,0" TextWrapping="Wrap" Text="Delay:" VerticalAlignment="Top"/>
-        <CheckBox  x:Name="cbDelayActivo" Content="Activo" HorizontalAlignment="Left" Margin="10,219,0,0" VerticalAlignment="Top" Click="cbDelayActivo_Click"/>
+        <CheckBox  x:Name="cbDelayActivo" Content="Activo" HorizontalAlignment="Left" Margin="10,219,0,0" VerticalAlignment="Top"   Click="cbDelayActivo_Click"/>
         <TextBlock HorizontalAlignment="Left" Margin="95,221,0,0" TextWrapping="Wrap" Text="Offset:" VerticalAlignment="Top"/>
         <Slider x:Name="sldDelayOffset" HorizontalAlignment="Left" Margin="95,242,0,0" VerticalAlignment="Top" Width="104" Maximum="3000" ValueChanged="sldDelayOffset_ValueChanged"/>
         <TextBlock x:Name="lblDelayOffset" HorizontalAlignment="Left" Margin="167,272,0,0" TextWrapping="Wrap" Text="0 ms" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="210,221,0,0" TextWrapping="Wrap" Text="Ganancia:" VerticalAlignment="Top"/>
-        <Slider x:Name="sldDelayGanancia" HorizontalAlignment="Left" Margin="210,242,0,30" Width="104" Maximum="1"/>
+        <Slider x:Name="sldDelayGanancia" HorizontalAlignment="Left" Margin="210,242,0,30" Width="104" Maximum="1" ValueChanged="sldDelayGanancia_ValueChanged"/>
         <TextBlock x:Name="lblDelayGanancia" HorizontalAlignment="Left" Margin="300,272,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top"/>
 
     </Grid>
